apps/allure-report/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: allure-report
  name: allure-report
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: allure-report
  template:
    metadata:
      labels:
        app.kubernetes.io/name: allure-report
    spec:
      containers:
        - name: allure-report
          image: allure/allure-report-storage:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
          readinessProbe:
            httpGet:
              path: /api/ping
              port: http
