apps/allure-report/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: allure-report
  name: allure-report
spec:
  rules:
    - host: allure.localhost
      http:
        paths:
          - backend:
              service:
                name: allure-report
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - allure.localhost
